**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 4.0                                 *
*	LAST UPDATE: May 17 2017                     *
*                                                *
**************************************************

Update: May 17th 2017
==================================================
->Method calcROSectorEff of python class AnalysisSuiteEfficiencyPredictor will now use the average eff to compute errors following binomial description rather than use std. deviation of ponts used to compute the average
->Updated the README.txt

Update: May 11th 2017
==================================================
->Renamed method predictEff of python class AnalysisSuiteEfficiencyPredictor to predictEffHVPt
->Added new method predictEffCurves to python class AnalysisSuiteEfficiencyPredictor, this method will call predictEffHVPt for each input HV Pt

Update: May 4th 2017
==================================================
->Added python class AnalysisSuiteVFATNoise for determining the avg & std. dev noise, pedestal, and threshold in a given (ieta,iphi) sector based on data from P5
->Python class PARAMS_ETASECTOR in Utilities.py will now store a list of boundaries for the iphi sectors
->Python class PARAMS_ETASECTOR has new method calcBoundaries() for determining boundaries for iphi sectors
->Method calcROSectorBoundaries in python class PARAMS_DET will either return the stored list from the PARAMS_ETASECTOR object or calculate the boundaries and then return them
->Python class AnalysisSuiteClusterCharge's method checkIfDataPtInRange will now accept a point that is within 10% of the data to be interpolated

Update: Apr 27th 2017
==================================================
->Attempting to reduce memory by using sloting in python classes